--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -16,6 +16,7 @@
   },
   "plugins": ["only-warn", "sort-imports-es6-autofix"],
   "rules": {
+    "func-names": "off",
     "import/extensions": ["error", "always"],
     "import/no-default-export": "error",
     "import/prefer-default-export": "off",
