--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -4,15 +4,8 @@
   "name": "Pagefreeze",
   "description": "No funny business!",
   "version": "0.1",
-  "permissions": [
-    "storage",
-    "tabs",
-    "webNavigation",
-    "scripting"
-  ],
-  "host_permissions": [
-    "*://*/*"
-  ],
+  "permissions": ["storage", "tabs", "webNavigation", "scripting"],
+  "host_permissions": ["*://*/*"],
   "background": {
     "service_worker": "page-background.js",
     "type": "module"
@@ -20,5 +13,6 @@
   "icons": {
     "24": "img/icon24.png",
     "48": "img/icon48.png"
-  }
+  },
+  "action": {}
 }
