--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,17 +1,4 @@
 {
-  "printWidth": 80,
-  "tabWidth": 2,
-  "semi": true,
-  "bracketSpacing": true,
-  "singleQuote": false,
   "trailingComma": "all",
-  "arrowParens": "always",
-  "proseWrap": "always",
-
-  "overrides": [
-    {
-      "files": "*.json",
-      "options": {}
-    }
-  ]
+  "proseWrap": "always"
 }
